Enviro - fix students in front of gradient via z-index

--- a/immersive-stories/less/environment.less
+++ b/immersive-stories/less/environment.less
@@ -1259,6 +1259,7 @@ section#fixed-section div.background .intro-body.move-higher {
             left: 30%;
             height: 80%;
             width: auto;
+            z-index: 1;
             &.bigger {
                 height: 100%;
             }
